--- a/CrowdFundWeb/Views/Home/Index.cshtml
+++ b/CrowdFundWeb/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">CreateProject</h1>
+        <p>Crete <a href="https://localhost:5001/project/createUpdate">project</a>.</p>
+        <p>Check <a href="https://localhost:5001/project">list of projects</a>.</p>
+    </div>
