--- a/CrowdFundWeb/Views/Home/Index.cshtml
+++ b/CrowdFundWeb/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
     <div class="text-center">
         <h1 class="display-4">CreateProject</h1>
         <p>Crete <a href="https://localhost:5001/project/createUpdate">project</a>.</p>
-        <p>Check <a href="https://localhost:5001/project">list of projects</a>.</p>
+        <p> <a href="https://localhost:5001/backer">list of projects</a>.</p>
     </div>
