--- a/CrowdFundWeb/Views/Project/Details.cshtml
+++ b/CrowdFundWeb/Views/Project/Details.cshtml
@@ -67,10 +67,10 @@
                 @Html.DisplayFor(model => model.Percentage)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.IsAvaliable)
+                @Html.DisplayNameFor(model => model.IsAvailable)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.IsAvaliable)
+                @Html.DisplayFor(model => model.IsAvailable)
             </dd>
         </dl>
     </div>
