--- a/CrowdFundWeb/Views/Project/List.cshtml
+++ b/CrowdFundWeb/Views/Project/List.cshtml
@@ -32,7 +32,7 @@
                     @project.budget
                 </td>
                 <td>
-                    @project.IsAvaliable
+                    @project.IsAvailable
                 </td>
                 <td>
                     @Html.ActionLink("See", "Details", new { id = project.id })
