--- a/CrowdFundWeb/Views/Project/Details.cshtml
+++ b/CrowdFundWeb/Views/Project/Details.cshtml
@@ -74,7 +74,39 @@
             </dd>
         </dl>
     </div>
+
+
+    <table class="table table-dark">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Price</th>
+                <th scope="col">Percentage</th>
+            </tr>
+        </thead>
+        
+        @{
+            var i = 1;
+            foreach (var r in Model.Rewards) {
+
+                <tr>
+                    <td>
+                        @i;
+                    </td>                    
+                    <td>
+                        @r.Price
+                    </td>                    
+                    <td>
+                        @r.Percentage
+                    </td>
+                </tr>
+            i++;
+
+            }
+        }
+    </table>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
+
