--- a/CrowdFundWeb/Views/Project/Details.cshtml
+++ b/CrowdFundWeb/Views/Project/Details.cshtml
@@ -81,7 +81,7 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Price</th>
-                <th scope="col">Percentage</th>
+                <th scope="col">Title</th>
             </tr>
         </thead>
         
@@ -97,7 +97,7 @@
                         @r.Price
                     </td>                    
                     <td>
-                        @r.Percentage
+                        @r.Title
                     </td>
                 </tr>
             i++;
