--- a/CrowdFundWeb/Views/Project/Details.cshtml
+++ b/CrowdFundWeb/Views/Project/Details.cshtml
@@ -6,107 +6,114 @@
 }
 
 
-    <div>
-        <br />
-        <h4 class="alert-info">Project Details</h4>
-        <hr />
-        <br />
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.id)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.id)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Tittle)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Tittle)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Description)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Description)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Photos)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Photos)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.budget)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.budget)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Videos)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Videos)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.DateCreated)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.DateCreated)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Deadline)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Deadline)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Percentage)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Percentage)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.IsAvailable)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.IsAvailable)
-            </dd>
-        </dl>
-    </div>
+<div>
+    <br />
+    <h4 class="alert-info">Project Details</h4>
+    <hr />
+    <br />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.id)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.id)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Tittle)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Tittle)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Photos)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Photos)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.budget)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.budget)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Videos)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Videos)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.DateCreated)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.DateCreated)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Deadline)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Deadline)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Percentage)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Percentage)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.IsAvailable)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.IsAvailable)
+        </dd>
+    </dl>
+</div>
 
 
-    <table class="table table-dark">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Price</th>
-                <th scope="col">Title</th>
-            </tr>
-        </thead>
-        
-        @{
-            var i = 1;
-            foreach (var r in Model.Rewards) {
+<table class="table table-dark">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Reward Id</th>
+            <th scope="col">Price</th>
+            <th scope="col">Title</th>
+        </tr>
+    </thead>
 
-                <tr>
-                    <td>
-                        @i;
-                    </td>                    
-                    <td>
-                        @r.Price
-                    </td>                    
-                    <td>
-                        @r.Title
-                    </td>
-                </tr>
+    @{
+        var i = 1;
+        foreach (var r in Model.Rewards) {
+
+        <tr>
+            <td>
+                @i
+            </td>
+
+            <td>
+                @r.Id
+            </td>
+            <td>
+                @r.Price
+            </td>
+            <td>
+                @r.Title
+            </td>
+            <td>
+                <p onclick="myFunction()">Buy reward</p>
+            </td>
+        </tr>
             i++;
 
-            }
         }
-    </table>
+    }
+</table>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
-
