--- a/CrowdFundWeb/Views/Home/Index.cshtml
+++ b/CrowdFundWeb/Views/Home/Index.cshtml
@@ -2,8 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">CreateProject</h1>
-        <p>Create <a href="https://localhost:5001/project/createUpdate">project</a>.</p>
-        <p> <a href="https://localhost:5001/backer">list of projects</a>.</p>
-    </div>
+<div class="text-center">
+    <h1 class="display-4">Crowfund</h1>
+
+    <img src="~/images/crowfind.png"
+         alt="crowfunding" style="width:400px;height:400px;">
+
+
+
+</div>
